objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Feature Requests</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Additional Information Needed</fullName>
        </values>
        <values>
            <fullName>Addressed via New Product Development</fullName>
        </values>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Being Tested</fullName>
        </values>
        <values>
            <fullName>Being Worked</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed - NR</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Saved Account</fullName>
        </values>
        <values>
            <fullName>Closed-Feature Request Logged</fullName>
        </values>
        <values>
            <fullName>Closed-Feature Request Received</fullName>
        </values>
        <values>
            <fullName>Closed-Feature Request Released</fullName>
        </values>
        <values>
            <fullName>Closed-Not valid Support Case</fullName>
        </values>
        <values>
            <fullName>Escalate</fullName>
        </values>
        <values>
            <fullName>In Development</fullName>
        </values>
        <values>
            <fullName>Information Submitted</fullName>
        </values>
        <values>
            <fullName>Need to Follow up</fullName>
        </values>
        <values>
            <fullName>Needs Release Date</fullName>
        </values>
        <values>
            <fullName>Needs Resource</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>QA</fullName>
        </values>
        <values>
            <fullName>Released to Production</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Resolved from Development</fullName>
        </values>
        <values>
            <fullName>Resolved-Pending Dev Release</fullName>
        </values>
        <values>
            <fullName>Resolved-Released to Beta</fullName>
        </values>
        <values>
            <fullName>Resolved-Waiting on Customer%27s Approval</fullName>
        </values>
        <values>
            <fullName>Returned to Support</fullName>
        </values>
        <values>
            <fullName>Scheduled for Release</fullName>
        </values>
        <values>
            <fullName>Sizing Requested</fullName>
        </values>
        <values>
            <fullName>Submitting Additional Information</fullName>
        </values>
        <values>
            <fullName>Unresolved</fullName>
        </values>
        <values>
            <fullName>Waiting on ADP3PA%2FRCI</fullName>
        </values>
        <values>
            <fullName>Waiting on FTP drop</fullName>
        </values>
        <values>
            <fullName>Waiting on response</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Haystak</fullName>
        <description>Haystak</description>
        <isActive>true</isActive>
        <values>
            <fullName>Additional Information Needed</fullName>
        </values>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed-Not valid Support Case</fullName>
        </values>
        <values>
            <fullName>Code</fullName>
        </values>
        <values>
            <fullName>Code and Post</fullName>
        </values>
        <values>
            <fullName>Escalate</fullName>
        </values>
        <values>
            <fullName>Information Submitted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending Approval</fullName>
        </values>
        <values>
            <fullName>Post</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>QA</fullName>
        </values>
        <values>
            <fullName>Ready for Compliance</fullName>
        </values>
        <values>
            <fullName>Ready to Post</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Resolved - Pending Haystak QC</fullName>
        </values>
        <values>
            <fullName>Returned to Support</fullName>
        </values>
        <values>
            <fullName>Sent to Compliance</fullName>
        </values>
        <values>
            <fullName>Submitting Additional Information</fullName>
        </values>
        <values>
            <fullName>Unresolved</fullName>
        </values>
        <values>
            <fullName>Waiting on Credentials</fullName>
        </values>
        <values>
            <fullName>Waiting on response</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Newbie</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Additional Information Needed</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed - NR</fullName>
        </values>
        <values>
            <fullName>Closed-Feature Request Received</fullName>
        </values>
        <values>
            <fullName>Closed-Not valid Support Case</fullName>
        </values>
        <values>
            <fullName>Escalate</fullName>
        </values>
        <values>
            <fullName>Information Submitted</fullName>
        </values>
        <values>
            <fullName>Need to Follow up</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>On Loan</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Returned to Support</fullName>
        </values>
        <values>
            <fullName>Submitting Additional Information</fullName>
        </values>
        <values>
            <fullName>Unresolved</fullName>
        </values>
        <values>
            <fullName>Waiting on ADP3PA%2FRCI</fullName>
        </values>
        <values>
            <fullName>Waiting on FTP drop</fullName>
        </values>
        <values>
            <fullName>Waiting on response</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Portal Users</fullName>
        <description>Customer Portal Users</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Loan</fullName>
        </values>
        <values>
            <fullName>Returned to Support</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Salesforce</fullName>
        <description>Used for processing Salesforce cases.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>Escalate</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending Approval</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Waiting on Credentials</fullName>
        </values>
        <values>
            <fullName>Waiting on response</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>VS Cases</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Additional Information Needed</fullName>
        </values>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Being Tested</fullName>
        </values>
        <values>
            <fullName>Being Worked</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed - NR</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Saved Account</fullName>
        </values>
        <values>
            <fullName>Closed-Feature Request Logged</fullName>
        </values>
        <values>
            <fullName>Closed-Feature Request Received</fullName>
        </values>
        <values>
            <fullName>Closed-Feature Request Released</fullName>
        </values>
        <values>
            <fullName>Closed-Not valid Support Case</fullName>
        </values>
        <values>
            <fullName>Escalate</fullName>
        </values>
        <values>
            <fullName>Information Submitted</fullName>
        </values>
        <values>
            <fullName>Need to Follow up</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>On Loan</fullName>
        </values>
        <values>
            <fullName>QA</fullName>
        </values>
        <values>
            <fullName>Redirected</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Resolved from Development</fullName>
        </values>
        <values>
            <fullName>Resolved-Pending Dev Release</fullName>
        </values>
        <values>
            <fullName>Resolved-Released to Beta</fullName>
        </values>
        <values>
            <fullName>Resolved-Waiting on Customer%27s Approval</fullName>
        </values>
        <values>
            <fullName>Returned from Development</fullName>
        </values>
        <values>
            <fullName>Returned to Support</fullName>
        </values>
        <values>
            <fullName>Submitting Additional Information</fullName>
        </values>
        <values>
            <fullName>Unresolved</fullName>
        </values>
        <values>
            <fullName>Waiting on 3rd Party</fullName>
        </values>
        <values>
            <fullName>Waiting on ADP3PA%2FRCI</fullName>
        </values>
        <values>
            <fullName>Waiting on FTP drop</fullName>
        </values>
        <values>
            <fullName>Waiting on response</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vAuto</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Additional Information Needed</fullName>
        </values>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Being Tested</fullName>
        </values>
        <values>
            <fullName>Being Worked</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed-Feature Request Logged</fullName>
        </values>
        <values>
            <fullName>Closed-Not valid Support Case</fullName>
        </values>
        <values>
            <fullName>Escalate</fullName>
        </values>
        <values>
            <fullName>Information Submitted</fullName>
        </values>
        <values>
            <fullName>Need to Follow up</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending Approval</fullName>
        </values>
        <values>
            <fullName>QA</fullName>
        </values>
        <values>
            <fullName>Redirected</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Resolved from Development</fullName>
        </values>
        <values>
            <fullName>Resolved-Pending Dev Release</fullName>
        </values>
        <values>
            <fullName>Resolved-Released to Beta</fullName>
        </values>
        <values>
            <fullName>Resolved-Waiting on Customer%27s Approval</fullName>
        </values>
        <values>
            <fullName>Returned from Development</fullName>
        </values>
        <values>
            <fullName>Returned to Support</fullName>
        </values>
        <values>
            <fullName>Scheduled for Release</fullName>
        </values>
        <values>
            <fullName>Submitting Additional Information</fullName>
        </values>
        <values>
            <fullName>Unresolved</fullName>
        </values>
        <values>
            <fullName>Waiting on ADP3PA%2FRCI</fullName>
        </values>
        <values>
            <fullName>Waiting on FTP drop</fullName>
        </values>
        <values>
            <fullName>Waiting on response</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vAuto Billing</fullName>
        <description>vAuto Billing Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>CRM Backlog</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalate to Support</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Need to Follow up</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vAuto CRM</fullName>
        <description>Process for CRM Team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>CRM Backlog</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalate to Billing</fullName>
        </values>
        <values>
            <fullName>Escalate to IT %28Closed%29</fullName>
        </values>
        <values>
            <fullName>Escalate to Support</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Need to Follow up</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Undeliverable %28Closed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vAuto Support</fullName>
        <description>Process for vAuto Tech Support</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Austin Follow Up</fullName>
        </values>
        <values>
            <fullName>Call Back</fullName>
        </values>
        <values>
            <fullName>Case Correction</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Code Verification</fullName>
        </values>
        <values>
            <fullName>Development %28Austin%29</fullName>
        </values>
        <values>
            <fullName>Development %28Integralink%29</fullName>
        </values>
        <values>
            <fullName>Escalate</fullName>
        </values>
        <values>
            <fullName>More Info %28Dealer%29</fullName>
        </values>
        <values>
            <fullName>More Info %28Integralink%29</fullName>
        </values>
        <values>
            <fullName>More Info %28Pef%2E Mgmt%2E%29</fullName>
        </values>
        <values>
            <fullName>More Info %28Trainer%29</fullName>
        </values>
        <values>
            <fullName>More Info %28Vendor%29</fullName>
        </values>
        <values>
            <fullName>Need to Follow up</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Trac Verification</fullName>
        </values>
        <values>
            <fullName>Training Blocker</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ATC_Tech_Contact__c</fullName>
        <inlineHelpText>This is for TIM only cases sent to AutoTrader. Please populate with the name of the technician at AT working on the case.</inlineHelpText>
        <label>ATC Tech Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AT_AutoTrader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoTrader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AT_Rep_Email__c</fullName>
        <label>AT Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AT_Rep_Name__c</fullName>
        <label>AT Rep Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AT_Rep_Phone__c</fullName>
        <label>AT Rep Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Adwords_ID_s__c</fullName>
        <description>Haystak</description>
        <formula>&quot;ADWORDS ID 1:&quot; &amp; Account.Adwords_CID__c &amp; BR() 
&amp; &quot;ADWORDS ID 2:&quot; &amp; Account.Adwords_CID_2__c &amp; BR() 
&amp; &quot;ADWORDS ID 3:&quot; &amp; Account.Adwords_CID_3__c &amp; BR() 
&amp; &quot;ADWORDS ID 4:&quot; &amp; Account.Adwords_CID_4__c &amp; BR() 
&amp; &quot;ADWORDS ID 5:&quot; &amp; Account.Adwords_CID_5__c</formula>
        <inlineHelpText>read only formula field that displays the Adword id&apos;s from the account. All updates need to be from the account</inlineHelpText>
        <label>Account Adwords ID&apos;s</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Alert__c</fullName>
        <formula>&quot;******&quot;&amp;Account.ALERT__c&amp;&quot;*********&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Bing_Ids__c</fullName>
        <description>Haystak</description>
        <formula>&quot;BING ID 1:&quot; &amp; Account.Bing_Id_1__c &amp; BR() 
&amp; &quot;BING ID 2:&quot; &amp; Account.Bing_Id_2__c &amp; BR() 
&amp; &quot;BING ID 3:&quot; &amp; Account.Bing_Id_3__c &amp; BR() 
&amp; &quot;BING ID 4:&quot; &amp; Account.Bing_Id_4__c &amp; BR() 
&amp; &quot;BING ID 5:&quot; &amp; Account.Bing_Id_5__c</formula>
        <inlineHelpText>Read only formula field that reads the Bing Id&apos;s from the account</inlineHelpText>
        <label>Account Bing Ids</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_DMS__c</fullName>
        <formula>TEXT(Account.DMS_System__c)</formula>
        <label>Account DMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <description>Haystak</description>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paused</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Value__c</fullName>
        <formula>Account.Account_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActName__c</fullName>
        <description>SFDC Account ID</description>
        <formula>AccountId</formula>
        <label>ActName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Feature_Request_Comments__c</fullName>
        <description>Used on Feature Requests only</description>
        <label>Additional Feature Request Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age_Status_L2_No_Weekend__c</fullName>
        <formula>IF( IsClosed = true, 
IF( Day_to_Resolve_not_Level_1_no_weekend__c &lt; 2.00, &quot;&lt; 24 hours&quot;, 
IF( Day_to_Resolve_not_Level_1_no_weekend__c &lt; 3.00, &quot;&lt; 48 hours&quot;, 
IF( Day_to_Resolve_not_Level_1_no_weekend__c &lt; 4.00, &quot;&lt; 72 hours&quot;, 
&quot;&gt; 72 hours&quot;) )),null)</formula>
        <label>Age Status-L2 (No Weekend)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Status_L2__c</fullName>
        <formula>if(IsClosed = true, 
IF( Day_to_Resolve_not_Level_1__c  &lt; 2.00, &quot;&lt; 24 hours&quot;, 
IF(Day_to_Resolve_not_Level_1__c &lt; 3.00, &quot;&lt; 48 hours&quot;, 
IF(Day_to_Resolve_not_Level_1__c &lt; 4.00, &quot;&lt; 72 hours&quot;, 
&quot;&gt; 72 hours&quot;) )),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that looks at the Days to Resolve not level 1 and then calculates the response time</inlineHelpText>
        <label>Age Status-L2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Status__c</fullName>
        <formula>if(IsClosed = true, 
IF( Days_Open__c &lt; 2.00, &quot;&lt; 24 hours&quot;,
IF(Days_Open__c &lt; 3.00, &quot;&lt; 48 hours&quot;,
IF(Days_Open__c &lt; 4.00, &quot;&lt; 72 hours&quot;,
&quot;&gt; 72 hours&quot;) )),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Level 1 only- categorizes based on Days Open</inlineHelpText>
        <label>Age Status-Lvl 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status_AppStat__c</fullName>
        <label>AppStat</label>
        <picklist>
            <picklistValues>
                <fullName>Not in Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Support Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting VPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Status_Mask__c</fullName>
        <formula>TEXT(Approval_Status_AppStat__c )</formula>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup camera or scanner</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is updated by a trigger when the Case Runner assign is used to assign a user to an escalated Case</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Role__c</fullName>
        <formula>Assigned_To__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Email_Address__c</fullName>
        <inlineHelpText>used for escalated case assignment</inlineHelpText>
        <label>Assignment Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Audit_Notes__c</fullName>
        <inlineHelpText>used by System Admin&apos;s only</inlineHelpText>
        <label>Audit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Austin_TRAC__c</fullName>
        <description>Austin development&apos;s Trac Case Number.</description>
        <label>Jira #</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Austin_Trac_Url__c</fullName>
        <formula>IF(ISNULL(Austin_TRAC__c), NULL, HYPERLINK(&quot;https://jira.vauto.com/browse/VA-&quot; &amp; TEXT(Austin_TRAC__c), &quot;Jira Issue VA-&quot; &amp; TEXT(Austin_TRAC__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jira URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autofollow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autofollow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autounfollow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autounfollow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Best_Method_of_Contact__c</fullName>
        <label>Best Method of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Desk Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Month__c</fullName>
        <description>CR-00015330 - For Haystak billing purposes.</description>
        <label>Billing Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <picklist>
            <picklistValues>
                <fullName>Firefox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netscape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>CASE(
   RecordType.DeveloperName, 
   &quot;Haystak&quot;, &quot;Haystak&quot;, 
   &quot;Haystak Closed&quot;, &quot;Haystak&quot;,
   &quot;Create&quot;, &quot;VinSolutions&quot;,
   &quot;Dealer_Issue&quot;, &quot;VinSolutions&quot;,
   &quot;Feature_Request&quot;, &quot;VinSolutions&quot;,
   &quot;Support&quot;, &quot;VinSolutions&quot;,
   &quot;vAuto_Billing&quot;, &quot;vAuto&quot;,
   &quot;vAuto_CRM&quot;, &quot;vAuto&quot;,
   &quot;vAuto_Support&quot;, &quot;vAuto&quot;,
   &quot;NOT DEFINED - SEE ADMIN&quot;
)</formula>
        <inlineHelpText>What business unit is attached to this case. Assigned based on Record Type.</inlineHelpText>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_Notes__c</fullName>
        <label>CSR Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSR_Working__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>CSR&apos;s will check this box to keep a neglected case in their view until voice contact is made</inlineHelpText>
        <label>CSR Working</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cars_com__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cars.com</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Assignment__c</fullName>
        <formula>Assigned_To__r.FirstName &amp;&quot; &quot;&amp; Assigned_To__r.LastName</formula>
        <inlineHelpText>formula field that looks at the Assign To field that is updated by the trigger when the case runner assign to is used and then puts the value into a field that cannot be changed by users</inlineHelpText>
        <label>Case Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Created_Role__c</fullName>
        <inlineHelpText>hidden field to use to store the role of who created a case</inlineHelpText>
        <label>Case Created Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Email__c</fullName>
        <label>Case Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Resolution__c</fullName>
        <inlineHelpText>updated from the resolve case runner</inlineHelpText>
        <label>Case Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Value__c</fullName>
        <formula>1</formula>
        <inlineHelpText>formula field that applies a value of 0 if the case is closed in the same month opened, otherwise value = 1</inlineHelpText>
        <label>Case Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Approval_Needed__c</fullName>
        <description>Haystak Field: Approval required from dealer for changes</description>
        <formula>TEXT( Account.Client_Approval_Needed__c )</formula>
        <inlineHelpText>Read Only field from the Account Page</inlineHelpText>
        <label>Client Approval Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Month__c</fullName>
        <formula>MONTH(  DATEVALUE(ClosedDate)  )</formula>
        <inlineHelpText>The month the Case was closed in - used for support metrics</inlineHelpText>
        <label>Close Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>